--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -209,6 +209,7 @@
       "recover_title": "Passwort vergessen?",
       "login": "Anmelden",
       "regist_title": "Ich bin neu hier.",
+      "regist_label": "Konto erstellen"
     }
   },
   "blogs": {
